# pdf-extraction

./: .gitignore  README.md  lefthook.yml  pyproject.toml
data/: .gitignore  UWC Website and PDF Data - Data.csv
notebooks/: main.ipynb
output/: .gitignore
scripts/: download.sh
src/: clean.py  extract.py
utils/: __init__.py  logger.py
